--- a/styles.css
+++ b/styles.css
@@ -156,3 +156,65 @@ header {
   height: 578px;
   margin-right: 20px;
 }
+
+/*Products Section*/
+.products {
+  padding: 50px 20px;
+  text-align: center;
+  background-color: #123521;
+  display: flex;
+  flex-direction: column;
+}
+
+.products h2 {
+  font-size: 48px;
+  margin-bottom: 20px;
+  font-family: 'Rock Salt', cursive;
+  color: #d6a12f;
+}
+
+.products p {
+  font-size: 20px;
+  margin-bottom: 20px;
+  font-family: 'Oxanium', cursive;
+  color: #d6a12f;
+} 
+
+.products .product-list-title {
+  text-align: left;
+  font-size: 40px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  background-color: #d6a12f;
+  height: 500px;
+}
+
+.product-item {
+  background-color: #123521;
+  padding: 20px;
+  border-radius: 10px;
+  width: 350px;
+  height: 400px;
+  text-align: center;
+}
+
+.product-item img {
+  width: 300px;
+  height: 200px;
+  border-radius: 10px;
+}
+
+.product-item h3 {
+  font-size: 24px;
+  margin-top: 10px;
+  font-family: 'Oxanium', cursive;
+  color: #d6a12f;
+}
